feat: Translate with context menu.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,11 @@
     }
   },
 
-  "permissions": ["storage"],
+  "permissions": [
+    "activeTab",
+    "contextMenus",
+    "storage"
+  ],
 
   "default_locale": "en",
 
